# salvo-swagger-test

./: Cargo.toml
src/: main.rs
src/controller/: mod.rs  swagger_controller.rs  user_controller.rs
src/entity/: mod.rs  sys_user_entity.rs
src/model/: common_model.rs  user_model.rs
src/router/: mod.rs  user_router.rs
src/utils/: res.rs
