[package]
name = "salvo-swagger-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
salvo = { version = "0.63.0", features = [
    "serve-static",
    "oapi",
    "logging",
    "catch-panic",
    "websocket",
    "session",
] }
tokio = { version = "1", features = ["macros"] }
rbdc = "4.5.10"
rbdc-mysql = "4.5.1"
rbs = "4.5.2"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.16.0"
rbatis = { version = "4.3", features = ["debug_mode"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
async-std = "1.11.0"
fast_log = "1.5.24"
log = "0.4.17"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
captcha = "0.0.9"
md5 = "0.7.0"
jsonwebtoken = "9.2.0"
